After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701060 - Fix memory leak of realm proxy
Fix memory leak of realm proxy
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-26 19:11 UTC by Stef Walter
Modified: 2013-05-28 10:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Fix memory leak of realm proxy (949 bytes, patch)
2013-05-26 19:12 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-05-26 19:11:53 UTC
'common' in enterprise_add_realm() leaks at the early return;
Comment 1 Stef Walter 2013-05-26 19:12:19 UTC
Created attachment 245353 [details] [review]
user-accounts: Fix memory leak of realm proxy
Comment 2 Bastien Nocera 2013-05-28 10:24:21 UTC
Review of attachment 245353 [details] [review]:

Looks good.
Comment 3 Stef Walter 2013-05-28 10:40:43 UTC
Pushed to gnome-3-8, will push to master.

Attachment 245353 [details] pushed as afecf31 - user-accounts: Fix memory leak of realm proxy