user-accounts: Fix memory leak of realm proxy

https://bugzilla.gnome.org/show_bug.cgi?id=701060